https://jira.corp.synacor.com/browse/ZCS-1368
CA changes after linguistic testing

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -193,7 +193,7 @@ Domain_GAL_Add = Afegeix un compte de la GAL
 Domain_GAL_Remove = Elimina
 
 Zimlet_Note = <b>obligatori</b> activar\u00e0 el zimlet i far\u00e0 que sigui invisible a les prefer\u00e8ncies del client web.<br>\
-<b>Habilitat</b> i <b>inhabilitat</b> nom\u00e9s defineixen l\u2019estat del zimlet per defecte i els usuaris poden invalidar aquesta prefer\u00e8ncia \
+<b>habilitat</b> i <b>inhabilitat</b> nom\u00e9s defineixen l\u2019estat del zimlet per defecte i els usuaris poden invalidar aquesta prefer\u00e8ncia \
 al client web.
 Zimlet_Description_Loading = Carregant descripci\u00f3 del zimlet...
 
@@ -356,7 +356,7 @@ Domain_GALTestNoResults = La cerca no ha donat cap resultat
 LBL_zimbraDomainStatus = Estat:
 Domain_zimbraDomainStatus = Estat del domini
 Domain_GalConfig_Complete = La configuraci\u00f3 de la llista global d\u2019adreces del domini ha finalitzat.<br>\
-	Premeu "ACABA" per desar els canvis.
+	Premeu "Finalitza" per desar els canvis.
 Domain_Auth_Config_Complete = La configuraci\u00f3 de l\u2019autenticaci\u00f3 del domini ha finalitzat. <br> Premeu "ACABA" per desar els canvis.
 	
 Domain_Config_Complete =\
@@ -1240,9 +1240,9 @@ NAD_MailOptions = Opcions de correu
 NAD_MailOptionsStandardClient = Client est\u00e0ndard (HTML)
 NAD_ContactsOptions = Opcions de contactes
 NAD_CalendarOptions = Opcions d\u2019agenda
-NAD_MailOptionsSending = S\u2019est\u00e0 enviant correu
-NAD_MailOptionsReceiving = S\u2019est\u00e0 rebent correu
-NAD_MailOptionsComposing = S\u2019est\u00e0 redactant correu
+NAD_MailOptionsSending = Enviament de correu
+NAD_MailOptionsReceiving = Recepci\u00f3 de correu
+NAD_MailOptionsComposing = Redacci\u00f3 de correu
 LBL_zimbraAllowAnyFromAddress = Permet enviar correu des de qualsevol adre\u00e7a
 LBL_zimbraAllowFromAddress = Permet enviar correu nom\u00e9s des d\u2019aquestes adreces:
 MSG_zimbraAllowFromAddress = Permet enviar correu nom\u00e9s des d\u2019aquestes adreces 
@@ -2288,7 +2288,7 @@ tab_close_warning = Hi ha dades sense desar a les pestanyes seg\u00fcents: <br /
 
 #initially saved searches
 ss_admin_account = Comptes d\u2019administraci\u00f3
-ss_external_accounts = Comptes externes
+ss_external_accounts = Comptes externs
 ss_locked_out_accounts = Comptes bloquejats
 ss_closed_accounts = Comptes tancats
 ss_maintenance_accounts = Comptes de manteniment
@@ -2379,7 +2379,7 @@ NAD_AccountTypeGrouper  = Tipus de compte
 AccountsAvailable = {0} utilitzades - {1} disponibles
 L_none = Cap
 L_catchAll = B\u00fastia de recollida general:
-Col_Cos = classe de servei
+Col_Cos = Classe de servei
 Col_Limit = L\u00edmit:
 msgCol_Limit = L\u00edmit
 headerCol_Limit = L\u00edmit
