https://jira.corp.synacor.com/browse/ZCS-1368

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -371,7 +371,7 @@ Domain_flush_cache_q =  Heu modificat les propietats del tema. Perqu\u00e8 els c
 	Voleu buidar la mem\u00f2ria cau del tema ara?
 Domain_DefaultCOS = Classe de servei per defecte:
 Domain_GalMode = Mode de llista global d\u2019adreces:
-Domain_GalSyncAccount = Nom del compte de sincronitzaci\u00f3 de la llista global d\u2019adreces:
+Domain_GalSyncAccount = Nom del compte de sincronitzaci\u00f3<br> de la llista global d\u2019adreces:
 Domain_InternalGALDSName = Nom de la font de dades per a la llista global d\u2019adreces interna:
 Domain_ExternalGALDSName = Nom de la font de dades per a la llista global d\u2019adreces externa:
 Domain_GALServerType = Tipus de servidor:
@@ -904,7 +904,7 @@ NAD_MTA_WebMailPort = Port de correu web del MTA:
 NAD_MTA_WebMailTimeout = Temps d\u2019espera de correu web del MTA (s):
 NAD_MTA_RelayMTA = MTA de retransmissi\u00f3 per lliurament externs:
 tt_MTA_RelayMTA = El MTA on s\u2019enviaran tots els missatges no locals.  Ha de tenir acc\u00e9s a Internet o a un altre MTA de retransmissi\u00f3.
-NAD_MTA_FallbackRelay = MTA de retransmissi\u00f3 per al lliurament extern (alternatiu):
+NAD_MTA_FallbackRelay = MTA de retransmissi\u00f3 per al lliurament extern<br> (alternatiu):
 tt_MTA_FallbackRelay = MTA alternatiu on s\u2019enviaran tots els missatges no locals. Ha de tenir acc\u00e9s a Internet o a un altre MTA de retransmissi\u00f3.
 NAD_MTA_MyNetworks = Xarxes de confian\u00e7a del MTA: 
 tt_MTA_MyNetworks = Les xarxes de confian\u00e7a pel MTA
