https://jira.corp.synacor.com/browse/ZCS-1880
- updating NO files with test changes

--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -226,7 +226,7 @@ Domain_AuthLdapStartTlsEnabled = Aktiver StartTLS
 Domain_llAuthLdapStartTlsEnabled = Aktiver StartTLS:
 Domain_WarningStartTLSIgnored = Advarsel! En av URL-adressene for LDAP benytter SSL (ldaps://). Dette vil medf\u00f8re at serveren ignorerer innstillingen Aktiver StartTLS!
 Domain_zimbraDNSCheckHostname = Vertsnavn for innkommende SMTP: 
-Domain_InboundSMTPNote = Dersom din MX-oppf\u00f8ring peker til et s\u00f8ppelpost-filter eller en annen ekstern ikke-Zimbra-server, angir du navnet p\u00e5 denne serveren i feltet Servernavn for innkommende SMTP.
+Domain_InboundSMTPNote = Dersom din MX-oppf\u00f8ring peker til et s\u00f8ppelpost-filter eller en annen ekstern ikke-Zimbra-server, angir du navnet p\u00e5 denne serveren i feltet Vertsnavn for innkommende SMTP.
 Domain_zimbraPublicServiceHostname = Vertsnavn for offentlig tjeneste:
 Domain_zimbraPublicServiceProtocol = Offentlig tjenesteprotokoll:
 Domain_zimbraPublicServicePort = Offentlig tjenesteport:
@@ -251,7 +251,7 @@ LBL_Domain_AuthComputedBindDn = Beregnet binding av DN:
 Domain_AuthComputedBindDn = Beregnet binding av DN
 Domain_AuthLdapSearchBase = LDAP-s\u00f8kebase:
 Domain_AuthLdapFilter = LDAP-filter:
-Domain_zimbraAuthFallbackToLocal = Hvis dette mislykkes, vend tilbake tilbake til lokal passordbehandling
+Domain_zimbraAuthFallbackToLocal = Hvis dette mislykkes, vend tilbake til lokal passordbehandling
 Domain_zimbraPasswordChangeListener = Ekstern lyttefunksjon for endring av passord:
 Domain_CreateNotebook = Opprett dokumentplass p\u00e5 domeneniv\u00e5:
 Domain_OverwriteTemplates = Overskriv dokumentmaler:
@@ -2206,7 +2206,7 @@ IMPORT_WIZ_DOWNLOAD_HELP = Brukerinstruksjoner
 CONNECTOR_DOWNLOAD_HELP = Brukerinstruksjoner
 GENERAL_MIG_WIZ_DOWNLOAD_TEXT = Dette Windows-programmet overf\u00f8rer e-post, kalender og kontakter fra en Microsoft Exchange-server eller PST-fil til en ZCS-server.
 MIG_WIZ_DOWNLOAD_TEXT = Dette Windows-programmet overf\u00f8rer e-post, kalender og kontakter fra en Microsoft Exchange-server til en ZCS-server. Denne veiviseren frar\u00e5des brukt. Administratorer b\u00f8r i stedet bruke ZCS-overf\u00f8ringsveiviseren for Exchange/PST.
-DOMINO_MIG_WIZ_DOWNLOAD_TEXT = Dette Windows-programmer overf\u00f8rer e-post, kalender og kontakter fra en IBM Domino-server til en ZCS-server.
+DOMINO_MIG_WIZ_DOWNLOAD_TEXT = Dette Windows-programmet overf\u00f8rer e-post, kalender og kontakter fra en IBM Domino-server til en ZCS-server.
 GROUPWISE_MIG_WIZ_DOWNLOAD_TEXT = Dette Windows-programmet overf\u00f8rer e-post, kalender og kontakter fra en Novell GroupWise-server til en ZCS-server.
 IMPORT_WIZ_DOWNLOAD_TEXT = Dette Windows-programmet importerer en Outlook PST-fil til en ZCS-server for en enkeltbruker. Denne veiviseren frar\u00e5des brukt. Brukerne b\u00f8r i stedet bruke ZCS-overf\u00f8ringsveiviseren for Exchange/PST.
 ZIMBRA_TOASTER_DOWNLOAD_TEXT = Denne MSI-en installerer Zimbra-toasteren p\u00e5 en brukers Windows-system. Toasteren varsler brukeren om ny e-post p\u00e5 brukerens konto p\u00e5 ZCS-serveren.
@@ -2215,8 +2215,8 @@ ServerStatusUnavailable = Data for serverstatus er ikke tilgjengelig. For \u00e5
 ServerStatusHealthy = Serveren er OK.
 
 DL_PublishedSharesLabel = Publiserte delte ressurser
-Account_Group_NoDirectMember = Ikke direkte medlem av noen distribusjonslister
-Account_Group_NoInDirectMember = Ikke indirekte medlem av noen distribusjonslister
+Account_Group_NoDirectMember = Ikke direkte medlem av noen <br>distribusjonslister
+Account_Group_NoInDirectMember = Ikke indirekte medlem av noen <br>distribusjonslister
 NAD_ShowGroupOnly = Vis bare distribusjonslister som kan brukes i ACL-er: 
 Account_DirectGroupLabel = Direkte medlem av
 Account_IndirectGroupLabel = Indirekte medlem av
@@ -2644,7 +2644,7 @@ MSG_AUTOPROV_DLG_EAGER = <ol><li><b>Automatisk EAGER-klargj\u00f8ring</b>: En se
   </li><li><b>Avsp\u00f8rringsintervall for automatisk klargj\u00f8ring</b> og <b>Planlagte servere</b> blir brukt i konfigurasjonen \
  for angitte servere. Begge kreves for \u00e5 aktivere EAGER-modus.</li>\
   <li><b>S\u00f8kefilter</b> for LDAP-konfigurasjon m\u00e5 ogs\u00e5 angis for denne klargj\u00f8ringen.</li></ol>
-MSG_AUTOPROV_DLG_LAZY = <ol><li><b>Automatisk LAZY-klargj\u00f8ring<b>: Oppretter automatisk Zimbra-kontoen f\u00f8rste gang brukeren logger p\u00e5 \
+MSG_AUTOPROV_DLG_LAZY = <ol><li><b>Automatisk LAZY-klargj\u00f8ring</b>: Oppretter automatisk Zimbra-kontoen f\u00f8rste gang brukeren logger p\u00e5 \
  via en av de eksterne autentiseringsmekanismene som er aktivert for automatisk klargj\u00f8ring.</li>\
   <li><b>Ekstern autentiseringsmekanisme</b>: LAZY-modus krever de eksterne autentiseringsmekanismene ovenfor. \
   N\u00e5r en bruker autentiseres via en av mekanismene ovenfor, og n\u00e5r brukerkontoen enn\u00e5 ikke \
