Fixing literal apostrophe characters not escaped in format strings
Apostrophes are quoting characters in MessageFormat-like formats.
A literal apostrophe must be written as a sequence of two apostrophe
characters, otherwise it might prevent template expansion further along
in the string, or at least be removed by the end result as a quoting
character.
Fixed many strings where that was not done properly or at all.
But only on strings containing elements such as {0}, the only way
available to identify something as a format.
I've been unable to identify and fix the additional format strings
present but
missing those elements.

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -213,7 +213,7 @@ Domain_QUOTA_Configuration = Configuraci\u00f3 de la quota del domini
 NAD_AddRegex = Afegeix expressi\u00f3 regular
 NAD_RemoveRegex = Elimina
 LBL_EmailValidate = Expressi\u00f3 regular per adre\u00e7a de correu no v\u00e0lida:
-ERROR_MSG_EmailValidReg = Expressi\u00f3 regular no v\u00e0lida: {0}, que hauria de tenir format d\u2019adre\u00e7a de correu (per ex.'@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Expressi\u00f3 regular no v\u00e0lida: {0}, que hauria de tenir format d\u2019adre\u00e7a de correu (per ex.''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = Cerca
 Domain_CreateGALSyncAccts = Crea un compte de sincronitzaci\u00f3 de GAL (recomanat)
