--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Domain-Kontingenteinstellung
 NAD_AddRegex = Regex hinzuf\u00fcgen
 NAD_RemoveRegex = Entfernen
 LBL_EmailValidate = Fester Ausdruck f\u00fcr ung\u00fcltige Mail-Adresse:
-ERROR_MSG_EmailValidReg = Ung\u00fcltiger fester Ausdruck: {0} sollte im Mail-Format sein (z.B. '@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Ung\u00fcltiger fester Ausdruck: {0} sollte im Mail-Format sein (z.B. ''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = Suchen
 Domain_CreateGALSyncAccts = Account f\u00fcr die GAL-Synchronisierung anlegen (empfohlen)
