--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Ajuste del espacio de almacenamiento de domino
 NAD_AddRegex = A\u00f1adir expresi\u00f3n regular
 NAD_RemoveRegex = Eliminar
 LBL_EmailValidate = Expresi\u00f3n regular para direcci\u00f3n de correo electr\u00f3nico no v\u00e1lida:
-ERROR_MSG_EmailValidReg = Expresi\u00f3n regular no v\u00e1lida: {0}, que deber\u00eda tener formato de correo electr\u00f3nico (por ej. '@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Expresi\u00f3n regular no v\u00e1lida: {0}, que deber\u00eda tener formato de correo electr\u00f3nico (por ej. ''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = Buscar
 Domain_CreateGALSyncAccts = Crear cuenta de sincronizaci\u00f3n de GAL (recomendado)
