--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Domeinuaren memoriaren espazioaren egokitzea
 NAD_AddRegex = Espresio erregularra gehitu
 NAD_RemoveRegex = Kendu
 LBL_EmailValidate = Helbide elektronikorako espresio erregular baliogabea:
-ERROR_MSG_EmailValidReg = Espresio erregular ez baliagarria: {0}, mezu elektronikoen formatua (adibidez, '@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Espresio erregular ez baliagarria: {0}, mezu elektronikoen formatua (adibidez, ''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = Bilatu
 Domain_CreateGALSyncAccts = Sortu HZO sinkronizatzeko kontua (gomendatua)
