--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Param\u00e8tre du quota de domaine
 NAD_AddRegex = Ajouter Regex
 NAD_RemoveRegex = Supprimer
 LBL_EmailValidate = Expression rationnelle pour une adresse \u00e9lectronique non valide\u00a0:
-ERROR_MSG_EmailValidReg = Expression rationnelle non valide\u00a0: {0}, qui devrait pr\u00e9senter un format d\u2019adresse \u00e9lectronique (ex.\u00a0: '@\\d+', 'postmaster@test.com').
+ERROR_MSG_EmailValidReg = Expression rationnelle non valide\u00a0: {0}, qui devrait pr\u00e9senter un format d\u2019adresse \u00e9lectronique (ex.\u00a0: ''@\\d+'', ''postmaster@test.com'').
 
 Alias_Find = Rechercher
 Domain_CreateGALSyncAccts = Cr\u00e9er un compte pour synchronisation avec la LAG (recommand\u00e9)
@@ -278,7 +278,7 @@ NAD_AddAllowedIP = Ajouter IP autoris\u00e9e
 NAD_RemoveVirtualHost = Supprimer
 Domain_VH_Explanation = Les h\u00f4tes virtuels permettent au syst\u00e8me de d\u00e9finir un domaine par \
  d\u00e9faut pour chaque utilisateur.  Tout utilisateur qui se connecte \u00e0 une URL en \
- pr\u00e9cisant l'un des noms d'h\u00f4te ci-dessous est consid\u00e9r\u00e9 comme \u00e9voluant dans ce domaine {0}. \
+ pr\u00e9cisant l''un des noms d''h\u00f4te ci-dessous est consid\u00e9r\u00e9 comme \u00e9voluant dans ce domaine {0}. \
 Remarque\u00a0: la suppression d\u2019un h\u00f4te virtuel prend effet seulement apr\u00e8s red\u00e9marrage du serveur de messagerie. 
 Domain_BC_ShareConf = Configuration du partage du porte-documents
 Notebook_Access_Control = Contr\u00f4le d'acc\u00e8s aux documents  
@@ -411,7 +411,7 @@ Domain_AddURL = Ajouter une URL
 Domain_REPEAT_REMOVE = Supprimer
 Domain_view_accounts = Afficher les comptes
 Domain_view_accounts_tt = Afficher la liste des comptes de ce domaine
-CreateDomain_q = Le domaine pr\u00e9cis\u00e9 {0} n'existe pas. Voulez-vous le cr\u00e9er?
+CreateDomain_q = Le domaine pr\u00e9cis\u00e9 {0} n''existe pas. Voulez-vous le cr\u00e9er?
 ZMLT_uploadTitle = Veuillez s\u00e9lectionner le fichier Zip stock\u00e9 dans Zimlet/Extension\u00a0:
 ZMLT_DeployZimlet = D\u00e9ployer
 ZMLT_ReselectZimlet = Res\u00e9lectionner
@@ -426,13 +426,13 @@ TBB_DeployNew_tt = D\u00e9ployer nouveau Zimlet ou Extension Admin
 ZMLT_SelectZimletStepTitle = S\u00e9lectionner un zimlet ou une extension au format zip
 ZMLT_DeployZimletStepTitle = Charger et d\u00e9ployer le zimlet ou l'extension
 ZMLT_DeployZimletWizardTitle = Charger et d\u00e9ployer le zimlet ou l'extension
-ZMLT_UploadZimletErrorMsg = <b>Impossible</b> de t\u00e9l\u00e9charger (uploader) le fichier du Zimlet. <br>Code d'erreur\u00a0HTTP : <b>{0}</b>.
+ZMLT_UploadZimletErrorMsg = <b>Impossible</b> de t\u00e9l\u00e9charger (uploader) le fichier du Zimlet. <br>Code d''erreur\u00a0HTTP : <b>{0}</b>.
 ZMLT_UploadZimletSuccessMsg = Le fichier du Zimlet a \u00e9t\u00e9 charg\u00e9.
 ZMLT_zimletFileNameError = Nom de fichier incorrect. Utilisez le bouton de navigation pour s\u00e9lectionner un Zimlet ou une extension de nom de fichier qui convienne.
 ZMLT_failedDeployZimlet = <b>Impossible</b> de d\u00e9ployer le Zimlet!
 ZMLT_DeployZimletComplete = Le fichier du Zimlet a \u00e9t\u00e9 d\u00e9ploy\u00e9. 
 ZMLT_DeployProgres = <nobr>D\u00e9ploiement des Zimlets{0}... <b>{1}</b></nobr>
-ZMLT_DeployProgresFail = <b>\u00c9chec</b> de d\u00e9ploiement des Zimlets{0}.  <br>Message d'erreur\u00a0: <b>{1}</b>
+ZMLT_DeployProgresFail = <b>\u00c9chec</b> de d\u00e9ploiement des Zimlets{0}.  <br>Message d''erreur\u00a0: <b>{1}</b>
 ZMLT_DeployViaServer = via le serveur {0}
 ZMLT_StatusPending = en attente
 ZMLT_StatusFailed = erreur
@@ -731,7 +731,7 @@ Alert_Flush_Theme_Cache = <b>Remarque\u00a0:</b> \
 Alert_Ngnix = <b>Remarque\u00a0:</b> les modifications apport\u00e9es aux param\u00e8tres prennent effet seulement apr\u00e8s le red\u00e9marrage de Ngnix.
 
 HSM_ProcessStatus = Une session HSM est en cours. <br>{0} blobs d\u00e9plac\u00e9s. {1} bo\u00eetes de r\u00e9ception trait\u00e9es. {2} bo\u00eetes de r\u00e9ception \u00e0 traiter.
-HSM_StatusReport = La derni\u00e8re session HSM a d\u00e9marr\u00e9 \u00e0 {0} et s'est termin\u00e9e \u00e0 {1}
+HSM_StatusReport = La derni\u00e8re session HSM a d\u00e9marr\u00e9 \u00e0 {0} et s''est termin\u00e9e \u00e0 {1}
 HSM_InfoUnavailable = Informations sur la derni\u00e8re session HSM non disponibles
 
 SERTBB_New_tt = Nouveau serveur
@@ -1733,7 +1733,7 @@ Reindex_Mbx_tt = \
 
 ERROR_CANNOT_CHANGE_VOLUME = Impossible de changer le type de volume actuel.
 CANNOT_DELETE_VOLUME_IN_USE = Impossible de supprimer le volume! Le volume est en cours d\u2019utilisation.
-ERROR_NO_PERMISSION_FOR_OPERATION_ON = Erreur! Vous n'avez pas l'autorisation d'effectuer cette op\u00e9ration sur {0}.
+ERROR_NO_PERMISSION_FOR_OPERATION_ON = Erreur! Vous n''avez pas l''autorisation d''effectuer cette op\u00e9ration sur {0}.
 ERROR_NO_PERMISSION_CREATE_ALIAS = Erreur! Vous n\u2019\u00eates pas autoris\u00e9 \u00e0 cr\u00e9er d\u2019alias dans le domaine\u00a0{0}.
 ERROR_SESSION_EXPIRED = Votre session a expir\u00e9. Veuillez vous connecter de nouveau.
 ERROR_NO_FWD_REQ_LOCALDELIV = Pour d\u00e9sactiver la livraison locale, vous devez pr\u00e9ciser au moins une adresse de transfert.
@@ -1816,8 +1816,8 @@ WARNING_EACH_ALIAS3 = La liste de distribution {0} existe d\u00e9j\u00e0
 WARNING_EACH_ALIAS4 = Le liste de distribution {0} utilise d\u00e9j\u00e0 l\u2019alias {1}.
 WARNING_EACH_ALIAS5 = La ressource {0} existe d\u00e9j\u00e0.
 WARNING_EACH_ALIAS6 = La ressource {0} est d\u00e9j\u00e0 associ\u00e9e \u00e0 l\u2019alias {1}.
-WARNING_ALIAS_EXISTS = Impossible d'ajouter l'alias : {0}
-WARNING_ALIASES_EXIST = Impossible d'ajouter les alias : {0}
+WARNING_ALIAS_EXISTS = Impossible d''ajouter l''alias : {0}
+WARNING_ALIASES_EXIST = Impossible d''ajouter les alias : {0}
 WARNING_ALIASES_TARGET_NON_EXIST = Le compte cible {0} n\u2019existe pas.
 ERROR_TARGET_DOMAIN_NOT_EXIST = Le domaine cible {0} n\u2019existe pas.
 ERROR_DOMAIN_ALIAS_EXIST = Impossible de cr\u00e9er l\u2019alias de domaine {0}. Il existe d\u00e9j\u00e0.
