--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Pengaturan Kuota Domain
 NAD_AddRegex = Tambah Regex
 NAD_RemoveRegex = Hapus
 LBL_EmailValidate = Ungkapan reguler untuk alamat email yang tidak valid:
-ERROR_MSG_EmailValidReg = Ungkapan reguler tidak valid: {0}, yang seharusnya menjadi format email (misalnya '@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Ungkapan reguler tidak valid: {0}, yang seharusnya menjadi format email (misalnya ''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = Cari
 Domain_CreateGALSyncAccts = Buat akun Sinkronisasi GAL (disarankan)
