--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -425,7 +425,7 @@ ZMLT_zimletFileNameError = Nome file non valido. Usa il pulsante Sfoglia per sel
 ZMLT_failedDeployZimlet = <b>Impossibile</b> implementare il file zimlet.
 ZMLT_DeployZimletComplete = File zimlet implementato <b>correttamente</b>. 
 ZMLT_DeployProgres = <nobr>Implementazione sul server {0} in corso... <b>{1}</b></nobr>
-ZMLT_DeployProgresFail = <b>Impossibile</b> eseguire l'implementazione sul server {0}.  <br>Messaggio di errore: <b>{1}</b>
+ZMLT_DeployProgresFail = <b>Impossibile</b> eseguire l''implementazione sul server {0}.  <br>Messaggio di errore: <b>{1}</b>
 ZMLT_DeployViaServer = tramite server {0}
 ZMLT_StatusPending = in attesa
 ZMLT_StatusFailed = non riuscito
@@ -1176,7 +1176,7 @@ NAD_new = nuovo
 LBL_zimbraGalMaxResults = La maggior parte dei risultati riportati dalla ricerca GAL:
 MSG_zimbraGalMaxResults = La maggior parte dei risultati riportati dalla ricerca GAL
 NAD_DomainAccountLimits_p = <b>Avviso:</b> \u00e8 stato raggiunto il limite massimo di account per il dominio {0}. {1} account oltre il limite.
-NAD_DomainAccountLimits_s = <b>Avviso:</b> \u00e8 stato raggiunto il limite di account per il dominio {0}. L'account {1} \u00e8 oltre il limite.
+NAD_DomainAccountLimits_s = <b>Avviso:</b> \u00e8 stato raggiunto il limite di account per il dominio {0}. L''account {1} \u00e8 oltre il limite.
 MSG_AccountTypeUnavailable = <b>Avviso:</b> \u00e8 stato raggiunto il limite massimo di account per i tipi di account indicati di seguito. Aumenta i limiti degli account. In caso contrario, verr\u00e0 selezionato il tipo predefinito {0}.
 NAD_zimbraScheduledTaskNumThreads = Numero massimo di operazioni programmate che possono essere eseguite simultaneamente:
 
@@ -1859,7 +1859,7 @@ Q_UNDEPLOY_ZIMLETS = Vuoi davvero annullare l'implementazione di questi zimlet?
 Q_UNDEPLOY_ADMIN_EXTENSIONS = Vuoi davvero annullare l'implementazione di queste estensioni di amministrazione?
 Q_DELETE_DOMAINS = Vuoi davvero eliminare questi domini?
 Q_DELETE_DOMAIN = Vuoi davvero eliminare questo dominio?
-Q_FORCE_DELETE_DOMAIN = Il dominio {0} non \u00e8 vuoto, contiene {1} account di sistema e {2} account regolari. Forzare l'eliminazione del dominio e tutti i relativi account?
+Q_FORCE_DELETE_DOMAIN = Il dominio {0} non \u00e8 vuoto, contiene {1} account di sistema e {2} account regolari. Forzare l''eliminazione del dominio e tutti i relativi account?
 Q_DELETE_COS = Vuoi davvero eliminare questa classe di servizio?
 Q_DELETE_COSES = Vuoi davvero eliminare queste classi di servizio?
 Q_SAVE_CHANGES = Vuoi salvare le modifiche correnti?
@@ -2154,10 +2154,10 @@ Account_Group = ACL attivato
 Group_via = Mediante lista di distribuzione
 NAD_SearchSameDomain = per dominio corrente
 DLXV_LabelIsgroup = Pu\u00f2 essere usato in un ACL:
-Q_REMOVE_INDIRECT_GROUP = Rimuovendo l'appartenenza della lista di distribuzione {0}, <br />si eliminer\u00e0 anche l'appartenenza delle seguenti liste di distribuzione: <br />{1}<br /> Eliminare l'appartenenza della lista di distribuzione?
+Q_REMOVE_INDIRECT_GROUP = Rimuovendo l''appartenenza della lista di distribuzione {0}, <br />si eliminer\u00e0 anche l''appartenenza delle seguenti liste di distribuzione: <br />{1}<br /> Eliminare l''appartenenza della lista di distribuzione?
 TooManyResults = Il numero di risultati da visualizzare supera il limite. Usa le funzioni di ricerca per perfezionare i risultati.
 AccountCreated = L''account {0} \u00e8 stato creato
-AliasCreated = L'alias {0} \u00e8 stato creato
+AliasCreated = L''alias {0} \u00e8 stato creato
 DLCreated = La lista di distribuzione {0} \u00e8 stata creata
 CosCreated = Il COS {0} \u00e8 stato creato
 ResourceCreated = La risorsa {0} \u00e8 stata creata
