--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Tetapan Kuota Domain
 NAD_AddRegex = Tambah Regex
 NAD_RemoveRegex = Alih keluar
 LBL_EmailValidate = Ungkapan biasa untuk alamat e-mel tidak sah:
-ERROR_MSG_EmailValidReg = Ungkapan biasa tidak sah: {0}, yang seharusnya merupakan format e-mel (cth. '@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Ungkapan biasa tidak sah: {0}, yang seharusnya merupakan format e-mel (cth. ''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = Cari
 Domain_CreateGALSyncAccts = Cipta Akaun Segerak GAL (disyorkan)
