--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Setare cot\u0103 domeniu
 NAD_AddRegex = Ad\u0103ugare Regex
 NAD_RemoveRegex = Eliminare
 LBL_EmailValidate = Expresie obi\u015fnuit\u0103 pentru o adres\u0103 de e-mail incorect\u0103:
-ERROR_MSG_EmailValidReg = Expresie incorect\u0103 obi\u015fnuit\u0103: {0}, care ar trebui s\u0103 fie \u00een formatul de e-mail (de ex. '@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Expresie incorect\u0103 obi\u015fnuit\u0103: {0}, care ar trebui s\u0103 fie \u00een formatul de e-mail (de ex. ''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = G\u0103sire
 Domain_CreateGALSyncAccts = Creare cont de sincronizare GAL (recomandat)
