--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Nastavitev dele\u017ea domene
 NAD_AddRegex = Dodaj Regex
 NAD_RemoveRegex = Odstrani
 LBL_EmailValidate = Navadni izraz za neveljaven e-po\u0161tni naslov:
-ERROR_MSG_EmailValidReg = Neveljaven navadni izraz: {0}, ki naj bi bil v obliki e-po\u0161te (npr. '@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Neveljaven navadni izraz: {0}, ki naj bi bil v obliki e-po\u0161te (npr. ''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = Najdi
 Domain_CreateGALSyncAccts = Ustvari sinhronizacijski ra\u010dun GAL (priporo\u010deno)
