--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Etki Alan\u0131 Kota Ayar\u0131
 NAD_AddRegex = Regex Ekle
 NAD_RemoveRegex = Kald\u0131r
 LBL_EmailValidate = Ge\u00e7ersiz e-posta adresi i\u00e7in d\u00fczenli ifade:
-ERROR_MSG_EmailValidReg = Ge\u00e7ersiz d\u00fczenli ifade: e-posta bi\u00e7imi olmas\u0131 gereken {0} (\u00f6r. '@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Ge\u00e7ersiz d\u00fczenli ifade: e-posta bi\u00e7imi olmas\u0131 gereken {0} (\u00f6r. ''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = Bul
 Domain_CreateGALSyncAccts = GAL E\u015fzamanlama hesab\u0131 olu\u015ftur (\u00f6nerilen)
