--- a/WebRoot/messages/ZabMsg_fr.properties
+++ b/WebRoot/messages/ZabMsg_fr.properties
@@ -59,7 +59,7 @@ MessageContent = message
 OVP_dlSearchResult = Listes de distribution
 
 HELP_CENTER_TITLE = Centre d'aide pour l'administrateur Zimbra
-onlineHelpDetail = Pour savoir comment utiliser la console d'administration, cliquez sur le lien Aide en ligne Zimbra. Pour des informations d\u00e9taill\u00e9es \
+onlineHelpDetail = Pour savoir comment utiliser la console d''administration, cliquez sur le lien Aide en ligne Zimbra. Pour des informations d\u00e9taill\u00e9es \
                    sur les nouvelles fonctions et les probl\u00e8mes qui ont \u00e9t\u00e9 r\u00e9solus dans cette version, acc\u00e9dez \u00e0 la page <a target="_new" href="{0}">\
                    Zimbra Collaboration Server Documentation</a> et lisez les notes de versions.
 HELP_topMigrationQuestions = Principales questions sur la migration
