--- a/WebRoot/messages/ZabMsg_fr_CA.properties
+++ b/WebRoot/messages/ZabMsg_fr_CA.properties
@@ -71,7 +71,7 @@ HELP_CENTER_TITLE = Centre d'aide pour l'administrateur Zimbra
 
 # DEPRECATED
 # see ZaMsg.desc_help_center_1
-onlineHelpDetail = Pour apprendre \u00e0 utiliser la console d'administration Zimbra, cliquez sur le lien Aide en ligne Zimbra. Pour plus de d\u00e9tails \
+onlineHelpDetail = Pour apprendre \u00e0 utiliser la console d''administration Zimbra, cliquez sur le lien Aide en ligne Zimbra. Pour plus de d\u00e9tails \
  sur les nouvelles fonctions et sur les am\u00e9liorations apport\u00e9es dans cette version, allez \u00e0 la page <a target="_new" href="{0}">\
  Documentation Zimbra Collaboration Server </a> et consultez les Notes de version.
 HELP_topMigrationQuestions = Principales questions sur la migration
