--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -215,7 +215,7 @@ Domain_QUOTA_Configuration = \ub3c4\uba54\uc778 \ud560\ub2f9\ub7c9 \uc124\uc815
 NAD_AddRegex = Regex \ucd94\uac00
 NAD_RemoveRegex = \uc81c\uac70
 LBL_EmailValidate = \uc62c\ubc14\ub974\uc9c0 \uc54a\uc740 \uc774\uba54\uc77c \uc8fc\uc18c\uc5d0 \ub300\ud55c \uc815\uaddc \ud45c\ud604\uc2dd:
-ERROR_MSG_EmailValidReg = \uc62c\ubc14\ub974\uc9c0 \uc54a\uc740 \uc815\uaddc \ud45c\ud604\uc2dd: {0}, \uc774\ub294 \uc774\uba54\uc77c \ud615\uc2dd\uc774\uc5b4\uc57c \ud569\ub2c8\ub2e4(\uc608:'@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = \uc62c\ubc14\ub974\uc9c0 \uc54a\uc740 \uc815\uaddc \ud45c\ud604\uc2dd: {0}, \uc774\ub294 \uc774\uba54\uc77c \ud615\uc2dd\uc774\uc5b4\uc57c \ud569\ub2c8\ub2e4(\uc608:''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = \ucc3e\uae30
 Domain_CreateGALSyncAccts = GAL \ub3d9\uae30\ud654 \uacc4\uc815 \ub9cc\ub4e4\uae30(\uad8c\uc7a5)
