--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Defini\u00e7\u00e3o de quota de dom\u00ednio
 NAD_AddRegex = Adicionar Regex
 NAD_RemoveRegex = Remover
 LBL_EmailValidate = Express\u00e3o regular para endere\u00e7o de email inv\u00e1lido:
-ERROR_MSG_EmailValidReg = Express\u00e3o regular inv\u00e1lida: {0}, o qual deve ter um formato de email (por exemplo, '@\\d+', 'postmaster@teste.com'). 
+ERROR_MSG_EmailValidReg = Express\u00e3o regular inv\u00e1lida: {0}, o qual deve ter um formato de email (por exemplo, ''@\\d+'', ''postmaster@teste.com''). 
 
 Alias_Find = Encontrar
 Domain_CreateGALSyncAccts = Criar conta de sincroniza\u00e7\u00e3o da GAL (recomendado)
