--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -215,7 +215,7 @@ Domain_QUOTA_Configuration = \u0e01\u0e32\u0e23\u0e15\u0e31\u0e49\u0e07\u0e04\u0
 NAD_AddRegex = \u0e40\u0e1e\u0e34\u0e48\u0e21 Regex
 NAD_RemoveRegex = \u0e40\u0e2d\u0e32\u0e2d\u0e2d\u0e01
 LBL_EmailValidate = \u0e19\u0e34\u0e1e\u0e08\u0e19\u0e4c\u0e1b\u0e23\u0e01\u0e15\u0e34\u0e2a\u0e33\u0e2b\u0e23\u0e31\u0e1a\u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e2d\u0e35\u0e40\u0e21\u0e25\u0e17\u0e35\u0e48\u0e44\u0e21\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07:
-ERROR_MSG_EmailValidReg = \u0e19\u0e34\u0e1e\u0e08\u0e19\u0e4c\u0e1b\u0e23\u0e01\u0e15\u0e34\u0e17\u0e35\u0e48\u0e44\u0e21\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07: {0} \u0e0b\u0e36\u0e48\u0e07\u0e04\u0e27\u0e23\u0e40\u0e1b\u0e47\u0e19\u0e23\u0e39\u0e1b\u0e41\u0e1a\u0e1a\u0e2d\u0e35\u0e40\u0e21\u0e25 (\u0e40\u0e0a\u0e48\u0e19 '@\\d+', 'postmaster@test.com') 
+ERROR_MSG_EmailValidReg = \u0e19\u0e34\u0e1e\u0e08\u0e19\u0e4c\u0e1b\u0e23\u0e01\u0e15\u0e34\u0e17\u0e35\u0e48\u0e44\u0e21\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07: {0} \u0e0b\u0e36\u0e48\u0e07\u0e04\u0e27\u0e23\u0e40\u0e1b\u0e47\u0e19\u0e23\u0e39\u0e1b\u0e41\u0e1a\u0e1a\u0e2d\u0e35\u0e40\u0e21\u0e25 (\u0e40\u0e0a\u0e48\u0e19 ''@\\d+'', ''postmaster@test.com'') 
 
 Alias_Find = \u0e04\u0e49\u0e19\u0e2b\u0e32
 Domain_CreateGALSyncAccts = \u0e2a\u0e23\u0e49\u0e32\u0e07\u0e1a\u0e31\u0e0d\u0e0a\u0e35 GAL Sync (\u0e41\u0e19\u0e30\u0e19\u0e33)
