--- a/WebRoot/messages/ZabMsg_iw.properties
+++ b/WebRoot/messages/ZabMsg_iw.properties
@@ -71,7 +71,7 @@ HELP_CENTER_TITLE = \u05de\u05e8\u05db\u05d6 \u05d4\u05e2\u05d6\u05e8\u05d4 \u05
 
 # DEPRECATED
 # see ZaMsg.desc_help_center_1
-onlineHelpDetail = \u05db\u05d3\u05d9 \u05dc\u05dc\u05de\u05d5\u05d3 \u05db\u05d9\u05e6\u05d3 \u05dc\u05d4\u05e9\u05ea\u05de\u05e9 \u05d1\u05de\u05e1\u05d5\u05e3 \u05d4\u05e0\u05d9\u05d4\u05d5\u05dc, \u05dc\u05d7\u05e5 \u05e2\u05dc \u05d4\u05e7\u05d9\u05e9\u05d5\u05e8 '\u05e2\u05d6\u05e8\u05d4 \u05de\u05e7\u05d5\u05d5\u05e0\u05ea \u05e9\u05dc Zimbra\u200f'. \u05dc\u05e4\u05e8\u05d8\u05d9\u05dd \u05e2\u05dc \
+onlineHelpDetail = \u05db\u05d3\u05d9 \u05dc\u05dc\u05de\u05d5\u05d3 \u05db\u05d9\u05e6\u05d3 \u05dc\u05d4\u05e9\u05ea\u05de\u05e9 \u05d1\u05de\u05e1\u05d5\u05e3 \u05d4\u05e0\u05d9\u05d4\u05d5\u05dc, \u05dc\u05d7\u05e5 \u05e2\u05dc \u05d4\u05e7\u05d9\u05e9\u05d5\u05e8 ''\u05e2\u05d6\u05e8\u05d4 \u05de\u05e7\u05d5\u05d5\u05e0\u05ea \u05e9\u05dc Zimbra\u200f''. \u05dc\u05e4\u05e8\u05d8\u05d9\u05dd \u05e2\u05dc \
                    \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05d7\u05d3\u05e9\u05d5\u05ea \u05d5\u05d1\u05e2\u05d9\u05d5\u05ea \u05e9\u05e0\u05e4\u05ea\u05e8\u05d5 \u05d1\u05de\u05d4\u05d3\u05d5\u05e8\u05d4 \u05d6\u05d5, \u05e2\u05d1\u05d5\u05e8 \u05dc\u05d3\u05e3 <a target="_new" href="{0}">\
                    \u05ea\u05d9\u05e2\u05d5\u05d3 \u05e9\u05e8\u05ea \u05e9\u05d9\u05ea\u05d5\u05e3 \u05d4\u05e4\u05e2\u05d5\u05dc\u05d4 \u05e9\u05dc Zimbra</a> \u05d5\u05e7\u05e8\u05d0 \u05d0\u05ea \u05d4\u05e2\u05e8\u05d5\u05ea \u05d4\u05de\u05d4\u05d3\u05d5\u05e8\u05d4.
 HELP_topMigrationQuestions = \u05e9\u05d0\u05dc\u05d5\u05ea \u05de\u05d5\u05d1\u05d9\u05dc\u05d5\u05ea \u05d1\u05e0\u05d5\u05e9\u05d0 \u05d4\u05e2\u05d1\u05e8\u05d4
