ZCS-2754: Added an option to show/hide Help Center. Removed a duplicate line from ZaOverviewPanelController.js

--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -2375,6 +2375,7 @@ UI_Comp_AccountsAliasesTab = \u30a2\u30ab\u30a6\u30f3\u30c8\u30d3\u30e5\u30fc\u3
 UI_Comp_AccountsSkinsTab = \u30a2\u30ab\u30a6\u30f3\u30c8\u30d3\u30e5\u30fc\u3001\u30b9\u30ad\u30f3\u30da\u30fc\u30b8
 UI_Comp_AccountsZimletsTab = \u30a2\u30ab\u30a6\u30f3\u30c8\u30d3\u30e5\u30fc\u3001Zimlet\u30da\u30fc\u30b8
 UI_Comp_DownloadsView = \u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u8868\u793a
+UI_Comp_HelpCenterView = \u30d8\u30eb\u30d7\u30bb\u30f3\u30bf\u30fc\u8868\u793a
 
 UI_Comp_DLMembersTab = \u914d\u5e03\u30ea\u30b9\u30c8\u30d3\u30e5\u30fc\u3001\u30e1\u30f3\u30d0\u30fc\u30da\u30fc\u30b8
 UI_Comp_DLAliasTab = \u914d\u5e03\u30ea\u30b9\u30c8\u30d3\u30e5\u30fc\u3001\u30a8\u30a4\u30ea\u30a2\u30b9\u30da\u30fc\u30b8
