ZCS-5753 - changes after linguistic changes 20181015
- adding translations for Tamil in other supported language so it will display in language menu

--- a/WebRoot/messages/ZmMsg_da.properties
+++ b/WebRoot/messages/ZmMsg_da.properties
@@ -1845,6 +1845,10 @@ localeName_sv = Svensk
 localeName_tr = Tyrkisk
 localeName_th = Thai
 localeName_uk = Ukrainsk
+localeName_ca = Catalansk
+localeName_no = Norsk
+localeName_vi = Vietnamesisk
+localeName_ta = Tamilsk
 
 localFolders = Lokale mapper
 localPart = lokal del
