--- a/WebRoot/messages/ZmMsg_es.properties
+++ b/WebRoot/messages/ZmMsg_es.properties
@@ -1925,6 +1925,10 @@ localeName_sv = Sueco
 localeName_tr = Turco
 localeName_th = Tailand\u00e9s
 localeName_uk = Ucraniano
+localeName_ca = Catal\u00e1n
+localeName_no = Noruego
+localeName_vi = Vietnamita
+localeName_ta = Tamil
 
 localFolders = Carpetas locales
 localPart = Parte local
