--- a/WebRoot/messages/ZmMsg_fr_CA.properties
+++ b/WebRoot/messages/ZmMsg_fr_CA.properties
@@ -1970,6 +1970,10 @@ localeName_sv = Su\u00e9dois
 localeName_tr = Turc
 localeName_th = Tha\u00ef
 localeName_uk = Ukrainien
+localeName_ca = Catalan
+localeName_no = Norv\u00e9gien
+localeName_vi = Vietnamien
+localeName_ta = Tamoul
 
 localFolders = Dossiers locaux
 localPart = partie locale
