--- a/WebRoot/messages/ZmMsg_in.properties
+++ b/WebRoot/messages/ZmMsg_in.properties
@@ -1970,6 +1970,10 @@ localeName_sv = Swedia
 localeName_tr = Turki
 localeName_th = Thai
 localeName_uk = Ukraina
+localeName_ca = Katalan
+localeName_no = Norwegia
+localeName_vi = Vietnam
+localeName_ta = Tamil
 
 localFolders = Folder Lokal
 localPart = bagian lokal
