--- a/WebRoot/messages/ZmMsg_it.properties
+++ b/WebRoot/messages/ZmMsg_it.properties
@@ -1852,6 +1852,10 @@ localeName_sv = Svedese
 localeName_tr = Turco
 localeName_th = Thailandese
 localeName_uk = Ucraino
+localeName_ca = Catalano
+localeName_no = Norvegese
+localeName_vi = Vietnamita
+localeName_ta = Tamil
 
 localFolders = Cartelle locali
 localPart = parte locale
