--- a/WebRoot/messages/ZmMsg_ms.properties
+++ b/WebRoot/messages/ZmMsg_ms.properties
@@ -1970,6 +1970,10 @@ localeName_sv = Bahasa Sweden
 localeName_tr = Bahasa Turki
 localeName_th = Bahasa Thai
 localeName_uk = Bahasa Ukraine
+localeName_ca = Bahasa Catalan
+localeName_no = Bahasa Norwegia
+localeName_vi = Bahasa Vietnam
+localeName_ta = Bahasa Tamil
 
 localFolders = Folder Setempat
 localPart = bahagian tempatan
