--- a/WebRoot/messages/ZmMsg_no.properties
+++ b/WebRoot/messages/ZmMsg_no.properties
@@ -1985,6 +1985,10 @@ localeName_sv = Svensk
 localeName_tr = Tyrkisk
 localeName_th = Thai
 localeName_uk = Ukrainsk
+localeName_ca = Katalansk
+localeName_no = Norsk
+localeName_vi = Vietnamesisk
+localeName_ta = Tamil
 
 localFolders = Lokale mapper
 localPart = lokal del
