--- a/WebRoot/messages/ZmMsg_sl.properties
+++ b/WebRoot/messages/ZmMsg_sl.properties
@@ -1969,6 +1969,10 @@ localeName_sv = \u0160vedski
 localeName_tr = Tur\u0161ki
 localeName_th = Tajski
 localeName_uk = Ukrainj\u0161ina
+localeName_ca = Katalan\u0161\u010dina
+localeName_no = Norve\u0161\u010dina
+localeName_vi = Vietnam\u0161\u010dina
+localeName_ta = Tamil
 
 localFolders = Lokalne mape
 localPart = lokalni del
