--- a/WebRoot/messages/ZmMsg_sv.properties
+++ b/WebRoot/messages/ZmMsg_sv.properties
@@ -1845,6 +1845,10 @@ localeName_sv = Svenska
 localeName_tr = Turkiska
 localeName_th = Thail\u00e4ndska
 localeName_uk = Ukrainska
+localeName_ca = Katalanska
+localeName_no = Norska
+localeName_vi = Vietnamesiska
+localeName_ta = Tamil
 
 localFolders = Lokala mappar
 localPart = lokal adress
