--- a/WebRoot/messages/ZmMsg_ca.properties
+++ b/WebRoot/messages/ZmMsg_ca.properties
@@ -1980,6 +1980,10 @@ localeName_sv = Suec
 localeName_tr = Turc
 localeName_th = Tailand\u00e8s
 localeName_uk = Ucra\u00efn\u00e8s
+localeName_ca = Catal\u00e0
+localeName_no = Noruec
+localeName_vi = Vietnamita
+localeName_ta = T\u00e0mil
 
 localFolders = Carpetes locals
 localPart = part local
