--- a/WebRoot/messages/ZmMsg_de.properties
+++ b/WebRoot/messages/ZmMsg_de.properties
@@ -1927,6 +1927,10 @@ localeName_sv = Schwedisch
 localeName_tr = T\u00fcrkisch
 localeName_th = Thai
 localeName_uk = Ukrainisch
+localeName_ca = Katalanisch
+localeName_no = Norwegisch
+localeName_vi = Vietnamesisch
+localeName_ta = Tamil
 
 localFolders = Lokale Ordner
 localPart = Lokaler Teil
