--- a/WebRoot/messages/ZmMsg_en_GB.properties
+++ b/WebRoot/messages/ZmMsg_en_GB.properties
@@ -1844,6 +1844,10 @@ localeName_sv = Swedish
 localeName_tr = Turkish
 localeName_th = Thai
 localeName_uk = Ukrainian
+localeName_ca = Catalan
+localeName_no = Norwegian
+localeName_vi = Vietnamese
+localeName_ta = Tamil
 
 localFolders = Local Folders
 localPart = local part
