--- a/WebRoot/messages/ZmMsg_eu.properties
+++ b/WebRoot/messages/ZmMsg_eu.properties
@@ -1965,6 +1965,10 @@ localeName_sv = Suediera
 localeName_tr = Turkiera
 localeName_th = Thailandiera
 localeName_uk = Ukrainera
+localeName_ca = Katalana
+localeName_no = Norvegiera
+localeName_vi = Vietnamera
+localeName_ta = Tamilera
 
 localFolders = Karpeta lokalak
 localPart = Zati lokala
