--- a/WebRoot/messages/ZmMsg_nl.properties
+++ b/WebRoot/messages/ZmMsg_nl.properties
@@ -1845,6 +1845,10 @@ localeName_sv = Zweeds
 localeName_tr = Turks
 localeName_th = Thais
 localeName_uk = Oekra\u00efens
+localeName_ca = Catalaans
+localeName_no = Noors
+localeName_vi = Vietnamees
+localeName_ta = Tamil
 
 localFolders = Plaatselijke mappen
 localPart = lokaal deel
