--- a/WebRoot/messages/ZmMsg_pl.properties
+++ b/WebRoot/messages/ZmMsg_pl.properties
@@ -1945,6 +1945,10 @@ localeName_sv = szwedzki
 localeName_tr = turecki
 localeName_th = tajski
 localeName_uk = ukrai\u0144ski
+localeName_ca = katalo\u0144ski
+localeName_no = norweski
+localeName_vi = wietnamski
+localeName_ta = tamilski
 
 localFolders = Foldery lokalne
 localPart = cz\u0119\u015b\u0107 lokalna
