--- a/WebRoot/messages/ZmMsg_pt_BR.properties
+++ b/WebRoot/messages/ZmMsg_pt_BR.properties
@@ -1845,6 +1845,10 @@ localeName_sv = Sueco
 localeName_tr = Turco
 localeName_th = Tailand\u00eas
 localeName_uk = Ucraniano
+localeName_ca = Catal\u00e3o
+localeName_no = Noruegu\u00eas
+localeName_vi = Vietnamita
+localeName_ta = T\u00e2mil
 
 localFolders = Pastas locais
 localPart = parte local
