--- a/WebRoot/messages/ZmMsg_ro.properties
+++ b/WebRoot/messages/ZmMsg_ro.properties
@@ -1970,6 +1970,10 @@ localeName_sv = suedez\u0103
 localeName_tr = turc\u0103
 localeName_th = tailandez\u0103
 localeName_uk = ucrainean\u0103
+localeName_ca = catalan\u0103
+localeName_no = norvegian\u0103
+localeName_vi = vietnamez\u0103
+localeName_ta = tamil\u0103
 
 localFolders = Foldere locale
 localPart = parte local\u0103
